Changes - improvements and call waiter
